--- a/404.html
+++ b/404.html
@@ -6,13 +6,9 @@
     <title>404 — Koordinat Tidak Ditemukan | Lontara</title>
 
     <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="/css/theme.css" />
     <link rel="stylesheet" href="/css/layout.css" />
@@ -20,32 +16,80 @@
     <link rel="stylesheet" href="/css/main.css" />
 
     <style>
-      /* --- STYLING KHUSUS RADAR INTELIJEN --- */
+      /* --- HEADER FIX: SINKRON & RESPONSIF --- */
+      header.header {
+        background-color: white !important;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        z-index: 1000;
+        border-bottom: 1px solid var(--border);
+        box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      }
+
+      .nav-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 80px;
+        padding: 0 20px;
+      }
+
+      .logo { flex: 0 0 auto; }
+
+      .nav {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex: 1;
+        gap: clamp(10px, 2.5vw, 35px);
+      }
+
+      .nav-item-cta a {
+        background-color: #123b3a;
+        color: white !important;
+        padding: 10px 24px;
+        border-radius: 8px;
+        font-weight: 700;
+        transition: 0.3s ease;
+      }
+
+      /* --- FIX: HAMBURGER ICON STYLING --- */
+      .nav-toggle {
+        display: none; /* Sembunyi di desktop */
+        flex-direction: column;
+        justify-content: space-between;
+        width: 30px;
+        height: 21px;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        z-index: 1001;
+      }
+
+      .nav-toggle span {
+        width: 100%;
+        height: 3px;
+        background-color: var(--primary); /* Menggunakan warna gelap agar terlihat di header putih */
+        border-radius: 10px;
+        transition: 0.3s;
+      }
+
+      /* --- STYLING RADAR 404 --- */
       .error-page {
         min-height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #0b1a19; /* Latar gelap pekat agar radar menyala */
+        background-color: #0b1a19;
         position: relative;
         overflow: hidden;
         color: white;
+        padding-top: 80px;
       }
 
-      /* Efek Scanline Monitor */
-      .error-page::after {
-        content: "";
-        position: absolute;
-        inset: 0;
-        background:
-          linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.15) 50%),
-          linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03));
-        background-size: 100% 4px, 4px 100%;
-        pointer-events: none;
-        z-index: 5;
-      }
-
-      /* Sistem Radar */
+      /* Radar & Scanline Logic */
       .radar-system {
         position: absolute;
         width: 800px;
@@ -53,9 +97,6 @@
         border: 1px solid rgba(0, 184, 169, 0.15);
         border-radius: 50%;
         z-index: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
       }
 
       .radar-sweep {
@@ -63,64 +104,30 @@
         inset: 0;
         border-radius: 50%;
         background: conic-gradient(from 0deg, transparent 60%, rgba(0, 184, 169, 0.35));
-        animation: scan-pro 4s cubic-bezier(0.4, 0, 0.2, 1) infinite;
-      }
-
-      .blip {
-        position: absolute;
-        width: 8px;
-        height: 8px;
-        background: var(--accent);
-        border-radius: 50%;
-        filter: blur(1px);
-        box-shadow: 0 0 10px var(--accent);
-        animation: flicker 3s infinite;
-        opacity: 0;
+        animation: scan-pro 4s infinite linear;
       }
 
       .error-code {
         font-size: clamp(6rem, 15vw, 12rem);
         font-weight: 900;
-        line-height: 1;
         background: linear-gradient(to bottom, #00b8a9, #ffffff);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        margin-bottom: 0;
-        letter-spacing: -10px;
-        filter: drop-shadow(0 0 20px rgba(0, 184, 169, 0.4));
-        animation: pulse-glow 4s ease-in-out infinite;
-      }
-
-      .error-content {
-        position: relative;
-        z-index: 10;
-        text-align: center;
-        max-width: 600px;
-        padding: 40px;
-      }
-
-      .error-content h2 {
-        font-size: 2rem;
-        color: white;
-        margin-top: -10px;
-        margin-bottom: 15px;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-      }
-
-      .error-content p {
-        color: rgba(255, 255, 255, 0.7);
-        font-size: 1.1rem;
-        margin-bottom: 40px;
-        line-height: 1.6;
+        animation: pulse-glow 4s infinite;
       }
 
       @keyframes scan-pro { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
-      @keyframes flicker { 0%, 100% { opacity: 0; transform: scale(1); } 50% { opacity: 1; transform: scale(1.5); } }
       @keyframes pulse-glow { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.02); } }
 
-      @media (max-width: 768px) {
-        .error-code { font-size: 8rem; letter-spacing: -5px; }
+      /* --- MEDIA QUERY: MOBILE VIEW --- */
+      @media (max-width: 992px) {
+        .nav { display: none; } /* Sembunyikan menu teks */
+        
+        .nav-toggle { 
+          display: flex; /* Tampilkan hamburger di mobile */
+        }
+
+        .error-code { font-size: 8rem; }
         .radar-system { width: 500px; height: 500px; }
       }
     </style>
@@ -150,43 +157,40 @@
           <div class="nav-item"><a href="/tentang/tentang.html">Tentang</a></div>
 
           <div class="nav-item nav-item-cta">
-            <a href="/kontak/kontak.html" class="nav-link-cta">Kontak</a>
+            <a href="/kontak/kontak.html">Kontak</a>
           </div>
         </nav>
 
-        <button class="nav-toggle" id="nav-toggle"><span></span><span></span><span></span></button>
+        <button class="nav-toggle" id="nav-toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
       </div>
     </header>
 
     <main class="error-page">
       <div class="radar-system">
         <div class="radar-sweep"></div>
-        <div class="blip" style="top: 25%; left: 35%; animation-delay: 1s"></div>
-        <div class="blip" style="top: 65%; left: 75%; animation-delay: 2.5s"></div>
-        <div class="blip" style="top: 45%; left: 15%; animation-delay: 0.5s"></div>
       </div>
 
-      <div class="container error-content">
+      <div class="container error-content" style="position: relative; z-index: 10; text-align: center;">
         <div class="error-code">404</div>
-        <h2>Signal Lost</h2>
-        <p>
+        <h2 style="font-size: 2rem; text-transform: uppercase;">Signal Lost</h2>
+        <p style="color: rgba(255, 255, 255, 0.7); margin-bottom: 40px;">
           Koordinat spasial yang Anda cari tidak terdeteksi oleh sensor kami.
-          Rute ini mungkin telah dipindahkan atau berada di luar cakupan geodatabase Lontara.
         </p>
 
         <div class="btn-container">
           <a href="/beranda.html" class="btn-primary" style="background: var(--accent); border: none">Inisialisasi Beranda</a>
-          <a href="/layanan/layanan.html" class="btn-secondary" style="border-color: white; color: white">Lihat Sistem Layanan</a>
         </div>
       </div>
     </main>
 
-    <footer class="footer" style="background: transparent; border: none; position: absolute; bottom: 20px; width: 100%; z-index: 10;">
-      <div class="container" style="text-align: center">
-        <p style="font-size: 0.85rem; color: rgba(255, 255, 255, 0.4)">
-          &copy; 2026 Lontara. Environmental & Land Intelligence Studio.
-        </p>
-      </div>
+    <footer class="footer" style="background: transparent; border: none; position: absolute; bottom: 20px; width: 100%; z-index: 10; text-align: center;">
+      <p style="font-size: 0.85rem; color: rgba(255, 255, 255, 0.4)">
+        &copy; 2026 Lontara Studio.
+      </p>
     </footer>
 
     <script src="/js/utils.js"></script>
