--- a/404.html
+++ b/404.html
@@ -1,53 +1,147 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Lontara - Sistem Cerdas untuk Manajemen Lingkungan & Lahan. Infrastruktur data spasial dan pemodelan prediktif."
-    />
-    <title>Lontara | Kecerdasan Lingkungan & Lahan</title>
+    <title>404 — Koordinat Tidak Ditemukan | Lontara</title>
 
-    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
-
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="css/theme.css" />
-    <link rel="stylesheet" href="css/layout.css" />
-    <link rel="stylesheet" href="css/components.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="/css/theme.css" />
+    <link rel="stylesheet" href="/css/layout.css" />
+    <link rel="stylesheet" href="/css/components.css" />
+    <link rel="stylesheet" href="/css/main.css" />
 
     <style>
-      /* Pengaturan Iframe WebGIS di Beranda */
-      .webgis-section {
-        padding: 100px 0;
-        background-color: var(--bg-light);
-      }
-      .webgis-container {
+      /* --- INTEGRASI HEADER MANTAP: RATA TENGAH --- */
+      header.header {
+        background-color: white !important;
+        position: fixed;
         width: 100%;
-        height: 650px;
-        border-radius: var(--radius);
-        overflow: hidden;
-        border: 1px solid var(--border);
-        box-shadow: 0 30px 60px -12px rgba(0, 0, 0, 0.12);
-        background: #1e1e2f;
-      }
-      .webgis-iframe {
-        width: 100%;
-        height: 100%;
-        border: none;
+        top: 0;
+        z-index: 1000;
+        border-bottom: 1px solid var(--border);
       }
 
-      @media (max-width: 768px) {
-        .webgis-container {
-          height: 450px;
-        }
+      .nav-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 80px;
+        padding: 0 40px;
+      }
+
+      .logo { flex: 0 0 120px; }
+
+      /* Memaksa Menu berada tepat di tengah */
+      .nav {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex: 1;
+        gap: clamp(10px, 2.5vw, 30px);
+      }
+
+      /* FIX: Gaya Tombol Hamburger (Wajib Muncul di Mobile) */
+      .nav-toggle {
+        display: none;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 28px;
+        height: 20px;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        z-index: 1100;
+      }
+      .nav-toggle span {
+        width: 100%;
+        height: 3px;
+        background-color: var(--primary);
+        border-radius: 10px;
+        transition: 0.3s;
+      }
+
+      /* --- RADAR ESTETIK PREMIUM --- */
+      .error-page {
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #0b1a19;
+        position: relative;
+        overflow: hidden;
+        color: white;
+        padding-top: 80px;
+      }
+
+      .error-page::after {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%);
+        background-size: 100% 4px;
+        pointer-events: none;
+        z-index: 5;
+      }
+
+      .radar-system {
+        position: absolute;
+        width: min(800px, 90vw);
+        height: min(800px, 90vw);
+        border-radius: 50%;
+        z-index: 1;
+        background-image: radial-gradient(rgba(0, 184, 169, 0.1) 1px, transparent 1px);
+        background-size: 50px 50px;
+      }
+
+      .radar-ring {
+        position: absolute;
+        inset: 0;
+        border: 1px solid rgba(0, 184, 169, 0.15);
+        border-radius: 50%;
+        margin: auto;
+      }
+
+      /* Animasi Radar Linear & Glow */
+      .radar-sweep {
+        position: absolute;
+        inset: 0;
+        border-radius: 50%;
+        background: conic-gradient(from 0deg, transparent 0%, rgba(0, 184, 169, 0.5) 30%, rgba(0, 184, 169, 1) 31%, transparent 32%);
+        filter: drop-shadow(0 0 15px rgba(0, 184, 169, 0.8));
+        animation: scan-radar-pro 4s linear infinite;
+        z-index: 2;
+      }
+
+      .error-content {
+        position: relative;
+        z-index: 10;
+        text-align: center;
+        max-width: 600px;
+        padding: 40px;
+      }
+
+      .error-code {
+        font-size: clamp(6rem, 15vw, 12rem);
+        font-weight: 900;
+        background: linear-gradient(to bottom, #00b8a9, #ffffff);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: pulse-glow 3s infinite ease-in-out;
+      }
+
+      @keyframes scan-radar-pro { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
+      @keyframes pulse-glow { 0%, 100% { opacity: 0.8; transform: scale(1); } 50% { opacity: 1; transform: scale(1.02); } }
+
+      @media (max-width: 992px) {
+        .nav { display: none; }
+        .nav-toggle { display: flex; }
+        .nav-container { padding: 0 25px; }
       }
     </style>
   </head>
@@ -57,51 +151,27 @@
 
     <header class="header" id="header">
       <div class="progress-bar" id="progress-bar"></div>
-
       <div class="container nav-container">
         <div class="logo">
-          <a href="beranda.html">
-            <img
-              src="assets/images/logo.png"
-              alt="Lontara Logo"
-              width="120"
-              height="38"
-            />
+          <a href="/beranda.html">
+            <img src="/assets/images/logo.png" alt="Lontara Logo" width="120" height="38" />
           </a>
         </div>
 
         <nav class="nav" id="nav-menu">
           <button class="nav-close" id="nav-close" aria-label="Tutup Menu">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <line x1="18" y1="6" x2="6" y2="18"></line>
-              <line x1="6" y1="6" x2="18" y2="18"></line>
-            </svg>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
           </button>
 
-          <div class="nav-item"><a href="layanan/layanan.html">Layanan</a></div>
-          <div class="nav-item">
-            <a href="portofolio/portofolio.html">Portofolio</a>
-          </div>
-          <div class="nav-item"><a href="artikel/artikel.html">Artikel</a></div>
-          <div class="nav-item">
-            <a href="publikasi/publikasi.html">Publikasi</a>
-          </div>
-          <div class="nav-item">
-            <a href="aset-digital/aset-digital.html">Aset Digital</a>
-          </div>
-          <div class="nav-item"><a href="tentang/tentang.html">Tentang</a></div>
+          <div class="nav-item"><a href="/layanan/layanan.html">Layanan</a></div>
+          <div class="nav-item"><a href="/portofolio/portofolio.html">Portofolio</a></div>
+          <div class="nav-item"><a href="/artikel/artikel.html">Artikel</a></div>
+          <div class="nav-item"><a href="/publikasi/publikasi.html">Publikasi</a></div>
+          <div class="nav-item"><a href="/aset-digital/aset-digital.html">Aset Digital</a></div>
+          <div class="nav-item"><a href="/tentang/tentang.html">Tentang</a></div>
 
           <div class="nav-item nav-item-cta">
-            <a href="kontak/kontak.html" class="nav-link-cta">Kontak</a>
+            <a href="/kontak/kontak.html" class="nav-link-cta">Kontak</a>
           </div>
         </nav>
 
@@ -114,69 +184,35 @@
     </header>
 
     <main class="error-page">
+      
       <div class="radar-system">
+        <div class="radar-ring" style="width: 80%; height: 80%;"></div>
+        <div class="radar-ring" style="width: 50%; height: 50%;"></div>
         <div class="radar-sweep"></div>
-        <div
-          class="blip"
-          style="top: 25%; left: 35%; animation-delay: 1s"
-        ></div>
-        <div
-          class="blip"
-          style="top: 65%; left: 75%; animation-delay: 2.5s"
-        ></div>
-        <div
-          class="blip"
-          style="top: 45%; left: 15%; animation-delay: 0.5s"
-        ></div>
       </div>
 
       <div class="container error-content">
-        <div class="error-code reveal-init">404</div>
-        <h2 class="reveal-init">Signal Lost</h2>
-
-        <p class="reveal-init">
-          Koordinat spasial yang Anda cari tidak terdeteksi oleh sensor kami.
-          Rute ini mungkin telah dipindahkan atau berada di luar cakupan
-          geodatabase Lontara.
+        <div class="error-code">404</div>
+        <h2 style="font-size: 2rem; margin-top: -10px; letter-spacing: 2px;">Signal Lost</h2>
+        <p style="color: rgba(255, 255, 255, 0.7); margin-bottom: 40px; line-height: 1.6;">
+          Koordinat spasial yang Anda cari tidak terdeteksi oleh sensor geodatabase Lontara. 
+          Rute ini mungkin telah dipindahkan atau berada di luar cakupan analisis kami.
         </p>
 
-        <div class="btn-container reveal-init">
-          <a
-            href="beranda.html"
-            class="btn-primary"
-            style="background: var(--accent); border: none"
-            >Inisialisasi Beranda</a
-          >
-          <a
-            href="layanan/layanan.html"
-            class="btn-secondary"
-            style="border-color: white; color: white"
-            >Lihat Sistem Layanan</a
-          >
+        <div class="btn-container">
+          <a href="/beranda.html" class="btn-primary" style="background: var(--accent); border: none; font-weight: 800; padding: 18px 30px;">Inisialisasi Beranda</a>
         </div>
       </div>
     </main>
 
-    <footer
-      class="footer"
-      style="
-        background: transparent;
-        border: none;
-        position: absolute;
-        bottom: 20px;
-        width: 100%;
-      "
-    >
-      <div class="container" style="text-align: center">
-        <p style="font-size: 0.85rem; color: rgba(255, 255, 255, 0.4)">
-          &copy; 2026 Lontara. Environmental & Land Intelligence Studio.
-        </p>
-      </div>
+    <footer class="footer" style="background: transparent; border: none; position: absolute; bottom: 20px; width: 100%; z-index: 10; text-align: center;">
+      <p style="font-size: 0.85rem; color: rgba(255, 255, 255, 0.4)">
+        &copy; 2026 Lontara Studio. Environmental & Land Intelligence Studio.
+      </p>
     </footer>
 
-    <script src="js/utils.js"></script>
-    <script src="js/animation.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/utils.js"></script>
+    <script src="/js/animation.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
-
