--- a/aset-digital/free/spatial-data.html
+++ b/aset-digital/free/spatial-data.html
@@ -1,334 +1,299 @@
 <!doctype html>
 <html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sampel Dataset Spasial | Lontara Free Resources</title>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Lora:ital,wght@0,400;0,600;1,400&display=swap"
-      rel="stylesheet"
-    />
+<title>Dataset Batas Administrasi Indonesia 2024 | Lontara Free Resources</title>
 
-    <link rel="stylesheet" href="../../css/theme.css" />
-    <link rel="stylesheet" href="../../css/layout.css" />
-    <link rel="stylesheet" href="../../css/components.css" />
-    <link rel="stylesheet" href="../../css/main.css" />
+<link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
 
-    <style>
-      /* Hero Section: Jarak aman dari sticky header */
-      .resource-header {
-        padding: 240px 0 100px;
-        text-align: left;
-        background: linear-gradient(to bottom, #f8fafc, #f1f5f9);
-        border-bottom: 1px solid var(--border);
-      }
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Lora:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet"/>
 
-      .breadcrumb-back {
-        background-color: var(--primary);
-        color: white !important;
-        padding: 12px 26px;
-        border-radius: 12px;
-        font-size: 0.9rem;
-        margin-bottom: 45px;
-        display: inline-flex;
-        align-items: center;
-        gap: 12px;
-        text-decoration: none;
-        transition: 0.3s ease;
-        font-weight: 800;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-      }
-      .breadcrumb-back:hover {
-        background-color: var(--accent);
-        transform: translateY(-2px);
-      }
+<link rel="stylesheet" href="../../css/theme.css" />
+<link rel="stylesheet" href="../../css/layout.css" />
+<link rel="stylesheet" href="../../css/components.css" />
+<link rel="stylesheet" href="../../css/main.css" />
 
-      /* Box Utama: Dibuat simetris sejajar tengah secara vertikal */
-      .download-box {
-        background: white;
-        border: 1px solid var(--border);
-        border-radius: 24px;
-        padding: 60px;
-        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.05);
-        margin-top: 80px;
-        position: relative;
-        z-index: 10;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 50px;
-        align-items: center; /* FIX: Membuat konten kiri & kanan sejajar di tengah */
-      }
+<style>
 
-      .download-info {
-        flex: 1 1 500px;
-        min-width: 320px;
-      }
+.resource-header{
+padding:240px 0 100px;
+background:linear-gradient(to bottom,#f8fafc,#f1f5f9);
+border-bottom:1px solid var(--border);
+}
 
-      .download-info h2 {
-        color: var(--primary);
-        margin-bottom: 40px;
-        font-size: 2rem;
-        font-weight: 800;
-        letter-spacing: -0.8px;
-        line-height: 1.2;
-      }
+.breadcrumb-back{
+background:var(--primary);
+color:#fff!important;
+padding:12px 26px;
+border-radius:12px;
+display:inline-flex;
+gap:12px;
+font-weight:800;
+text-decoration:none;
+margin-bottom:45px;
+}
 
-      .download-info ul {
-        list-style: none;
-      }
-      .download-info li {
-        margin-bottom: 24px;
-        display: flex;
-        align-items: flex-start;
-        gap: 18px;
-        color: var(--text-main);
-        line-height: 1.8;
-        font-size: 1.1rem;
-      }
-      .download-info li::before {
-        content: "✓";
-        color: var(--accent);
-        font-weight: 900;
-        font-size: 1.3rem;
-      }
+.download-box{
+background:#fff;
+border:1px solid var(--border);
+border-radius:24px;
+padding:60px;
+box-shadow:0 20px 50px rgba(0,0,0,.05);
+margin-top:80px;
+display:flex;
+flex-wrap:wrap;
+gap:50px;
+align-items:center;
+}
 
-      /* FIX: Kotak Unduhan dengan Logika Rata Tengah Sempurna */
-      .download-action {
-        flex: 0 0 340px;
-        background: var(--bg-light);
-        border-radius: 20px;
-        border: 2px dashed var(--border);
-        padding: 50px 40px;
+.download-info{
+flex:1 1 520px;
+}
 
-        /* LOGIKA RATA TENGAH */
-        display: flex;
-        flex-direction: column;
-        align-items: center; /* Menengahkah horizontal */
-        justify-content: center; /* Menengahkah vertikal */
-        text-align: center;
-      }
+.download-info h2{
+color:var(--primary);
+margin-bottom:30px;
+font-size:2rem;
+font-weight:800;
+}
 
-      /* Gaya Teks Lisensi */
-      .license-tag {
-        margin-bottom: 20px;
-        font-weight: 800;
-        color: var(--accent);
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        display: block;
-        width: 100%;
-      }
+.download-info p{
+line-height:1.9;
+margin-bottom:20px;
+}
 
-      .section-cta-green {
-        background-color: #123b3a !important;
-        color: white !important;
-        text-align: center;
-        padding: 100px 0;
-        margin-top: 100px;
-      }
+.download-info ul{
+list-style:none;
+}
 
-      @media (max-width: 992px) {
-        .download-box {
-          flex-direction: column;
-          padding: 40px 30px;
-          margin-top: 40px;
-        }
-        .download-action {
-          margin: 0 auto;
-          width: 100%;
-          flex: none;
-        }
-        .resource-header {
-          padding: 180px 0 60px;
-        }
-      }
-    </style>
-  </head>
+.download-info li{
+margin-bottom:20px;
+display:flex;
+gap:14px;
+line-height:1.8;
+}
 
-  <body>
-    <div class="nav-overlay" id="nav-overlay"></div>
+.download-info li::before{
+content:"✓";
+color:var(--accent);
+font-weight:900;
+}
 
-    <header class="header" id="header">
-      <div class="progress-bar" id="progress-bar"></div>
-      <div class="container nav-container">
-        <div class="logo">
-          <a href="../../beranda.html">
-            <img
-              src="../../assets/images/logo.png"
-              alt="Lontara Logo"
-              width="120"
-              height="38"
-            />
-          </a>
-        </div>
-        <nav class="nav" id="nav-menu">
-          <button class="nav-close" id="nav-close" aria-label="Tutup Menu">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-            >
-              <line x1="18" y1="6" x2="6" y2="18"></line>
-              <line x1="6" y1="6" x2="18" y2="18"></line>
-            </svg>
-          </button>
-          <div class="nav-item">
-            <a href="../../layanan/layanan.html">Layanan</a>
-          </div>
-          <div class="nav-item">
-            <a href="../../portofolio/portofolio.html">Portofolio</a>
-          </div>
-          <div class="nav-item">
-            <a href="../../artikel/artikel.html">Artikel</a>
-          </div>
-          <div class="nav-item">
-            <a href="../../publikasi/publikasi.html">Publikasi</a>
-          </div>
-          <div class="nav-item">
-            <a href="../aset-digital.html" class="active">Aset Digital</a>
-          </div>
-          <div class="nav-item">
-            <a href="../../tentang/tentang.html">Tentang</a>
-          </div>
-          <div class="nav-item nav-item-cta">
-            <a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a>
-          </div>
-        </nav>
-        <button class="nav-toggle" id="nav-toggle">
-          <span></span><span></span><span></span>
-        </button>
-      </div>
-    </header>
+.download-action{
+flex:0 0 360px;
+background:var(--bg-light);
+border-radius:20px;
+border:2px dashed var(--border);
+padding:45px 35px;
+display:flex;
+flex-direction:column;
+align-items:center;
+text-align:center;
+}
 
-    <main>
-      <section class="resource-header">
-        <div class="container">
-          <a href="../aset-digital.html" class="breadcrumb-back">
-            <svg
-              width="18"
-              height="18"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="3"
-            >
-              <line x1="19" y1="12" x2="5" y2="12"></line>
-              <polyline points="12 19 5 12 12 5"></polyline>
-            </svg>
-            Kembali ke Aset Digital
-          </a>
-          <h1
-            style="
-              font-size: 3.2rem;
-              color: var(--primary);
-              font-weight: 800;
-              line-height: 1.1;
-            "
-          >
-            Sampel Dataset Spasial
-          </h1>
-          <p
-            style="
-              color: var(--text-muted);
-              font-size: 1.25rem;
-              max-width: 750px;
-              margin-top: 20px;
-            "
-          >
-            Data vektor format Shapefile (.shp) dan GeoJSON yang telah
-            divalidasi topologinya untuk simulasi analisis spasial profesional.
-          </p>
-        </div>
-      </section>
+.license-tag{
+font-weight:800;
+color:var(--accent);
+letter-spacing:2px;
+margin-bottom:20px;
+}
 
-      <section class="section" style="padding-top: 0">
-        <div class="container">
-          <div class="download-box reveal-init">
-            <div class="download-info">
-              <h2>Spesifikasi & Isi Dataset</h2>
-              <ul>
-                <li>
-                  <strong>Sistem Koordinat:</strong> Menggunakan WGS 84
-                  (EPSG:4326) yang kompatibel secara universal di semua platform
-                  GIS.
-                </li>
-                <li>
-                  <strong>Layer Tematik:</strong> Mencakup peta tematik Jenis
-                  Tanah, Kelerengan (Slope), dan Curah Hujan untuk satu area
-                  studi.
-                </li>
-                <li>
-                  <strong>Analisis Lanjutan:</strong> Atribut data sudah
-                  dilengkapi kolom skoring otomatis untuk simulasi tumpang susun
-                  (*overlay*).
-                </li>
-                <li>
-                  <strong>Format File:</strong> Paket unduhan mencakup format
-                  .shp dan GeoJSON untuk fleksibilitas integrasi tools.
-                </li>
-              </ul>
-            </div>
+.download-action a{
+width:100%;
+margin-bottom:12px;
+}
 
-            <div class="download-action">
-              <span class="license-tag">Lisensi Gratis</span>
-              <a
-                href="#"
-                class="btn-primary"
-                style="
-                  width: 100%;
-                  display: block;
-                  margin-bottom: 15px;
-                  padding: 18px 0;
-                "
-                >Unduh Dataset (.zip)</a
-              >
-              <p style="font-size: 0.9rem; color: var(--text-muted)">
-                Ukuran File: 4.2 MB &bull; Versi 1.0.2
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
+.section-cta-green{
+background:#123b3a;
+color:#fff;
+text-align:center;
+padding:100px 0;
+margin-top:100px;
+}
 
-      <section class="section-cta-green">
-        <div class="container">
-          <h2 class="reveal-init">Butuh Dataset Spasial Kustom?</h2>
-          <p class="reveal-init">
-            Kami melayani pengolahan data geospasial untuk wilayah riset
-            spesifik Anda.
-          </p>
-          <div class="reveal-init">
-            <a href="../../kontak/kontak.html" class="btn-cta-white"
-              >Hubungi Kami Sekarang</a
-            >
-          </div>
-        </div>
-      </section>
-    </main>
+@media(max-width:992px){
+.download-box{
+flex-direction:column;
+padding:40px 30px;
+}
+.resource-header{
+padding:180px 0 60px;
+}
+}
 
-    <footer class="footer">
-      <div class="container footer-container">
-        <div>
-          <h4>Lontara</h4>
-          <p style="font-size: 0.9rem; color: var(--text-muted)">
-            Environmental & Land Intelligence Studio.
-          </p>
-        </div>
-        <div>
-          <p style="font-size: 0.9rem; color: var(--text-muted)">
-            &copy; 2026 Lontara. Seluruh Hak Cipta Dilindungi.
-          </p>
-        </div>
-      </div>
-    </footer>
+</style>
+</head>
 
-    <script src="../../js/utils.js"></script>
-    <script src="../../js/animation.js"></script>
-    <script src="../../js/main.js"></script>
-  </body>
+<body>
+
+<div class="nav-overlay" id="nav-overlay"></div>
+
+<header class="header" id="header">
+<div class="container nav-container">
+
+<div class="logo">
+<a href="../../beranda.html">
+<img src="../../assets/images/logo.png" width="120"/>
+</a>
+</div>
+
+<nav class="nav">
+<div class="nav-item"><a href="../../layanan/layanan.html">Layanan</a></div>
+<div class="nav-item"><a href="../../portofolio/portofolio.html">Portofolio</a></div>
+<div class="nav-item"><a href="../../artikel/artikel.html">Artikel</a></div>
+<div class="nav-item"><a href="../../publikasi/publikasi.html">Publikasi</a></div>
+<div class="nav-item"><a href="../aset-digital.html" class="active">Aset Digital</a></div>
+<div class="nav-item"><a href="../../tentang/tentang.html">Tentang</a></div>
+<div class="nav-item nav-item-cta">
+<a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a>
+</div>
+</nav>
+
+</div>
+</header>
+
+<main>
+
+<section class="resource-header">
+<div class="container">
+
+<a href="../aset-digital.html" class="breadcrumb-back">
+← Kembali ke Aset Digital
+</a>
+
+<h1 style="font-size:3.2rem;color:var(--primary);font-weight:800;">
+Dataset Batas Administrasi Indonesia 2024
+</h1>
+
+<p style="font-size:1.25rem;color:var(--text-muted);max-width:760px;margin-top:20px;">
+Dataset batas wilayah administrasi Indonesia berbasis data resmi
+Badan Informasi Geospasial (BIG) yang telah divalidasi topologi dan
+siap digunakan untuk analisis spasial profesional, WebGIS, maupun
+pengembangan aplikasi geospasial.
+</p>
+
+</div>
+</section>
+
+
+<section class="section" style="padding-top:0">
+<div class="container">
+
+<div class="download-box reveal-init">
+
+<div class="download-info">
+
+<h2>Deskripsi Dataset</h2>
+
+<p>
+Dataset ini menyediakan batas administrasi Indonesia lengkap mulai dari
+tingkat Provinsi hingga Desa/Kelurahan. Data berasal dari kegiatan
+Pemetaan Batas Wilayah oleh BIG dan telah disusun ulang agar konsisten
+secara atribut maupun geometri.
+</p>
+
+<ul>
+<li><strong>Sumber Data:</strong> Badan Informasi Geospasial (BIG) – TASWIL 2024</li>
+<li><strong>Sistem Koordinat:</strong> WGS84 (EPSG:4326)</li>
+<li><strong>Tipe Data:</strong> Polygon administrasi nasional</li>
+<li><strong>Kualitas:</strong> Topologi bebas overlap & gap</li>
+<li><strong>Format:</strong> Shapefile (.SHP)</li>
+<li><strong>Kegunaan:</strong> Analisis spasial, dashboard GIS, WebGIS, penelitian wilayah</li>
+</ul>
+
+<h2 style="margin-top:45px;">Struktur Layer</h2>
+
+<ul>
+<li>Administrasi Provinsi (38 Provinsi Indonesia)</li>
+<li>Administrasi Kabupaten/Kota</li>
+<li>Administrasi Kecamatan</li>
+<li>Administrasi Desa/Kelurahan</li>
+</ul>
+
+<p>
+Batas wilayah bersifat indikatif kartografis dan digunakan sebagai
+referensi spasial umum. Validasi lapangan diperlukan untuk penggunaan
+legal atau delimitasi resmi.
+</p>
+
+</div>
+
+
+<div class="download-action">
+
+<span class="license-tag">FREE DATASET</span>
+
+<a href="https://drive.google.com/file/d/1i-7YiqaVlBJ_f8crLmXo6fmJYfaH5dvV/view?usp=sharing"
+target="_blank"
+class="btn-primary">Unduh Administrasi Provinsi</a>
+
+<a href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view?usp=sharing"
+target="_blank"
+class="btn-primary">Unduh Administrasi Kabupaten/Kota</a>
+
+<a href="https://drive.google.com/file/d/1xQkTCOEvGKNbRsxfCzC1EjvTgnKDfLYK/view?usp=sharing"
+target="_blank"
+class="btn-primary">Unduh Administrasi Kecamatan</a>
+
+<a href="https://drive.google.com/file/d/19rQnH1lu9fHzyXAnZifKcLA1hB2RzDKx/view?usp=sharing"
+target="_blank"
+class="btn-primary">Unduh Administrasi Desa/Kelurahan</a>
+
+<p style="font-size:0.9rem;color:var(--text-muted);margin-top:10px;">
+Update Data: 2024 • Format SHP
+</p>
+
+</div>
+
+</div>
+</div>
+</section>
+
+
+<section class="section-cta-green">
+<div class="container">
+
+<h2>Butuh Dataset Spasial Kustom?</h2>
+
+<p>
+Lontara menyediakan layanan pengolahan data geospasial,
+pembuatan dataset tematik, serta integrasi WebGIS profesional.
+</p>
+
+<a href="../../kontak/kontak.html" class="btn-cta-white">
+Hubungi Kami Sekarang
+</a>
+
+</div>
+</section>
+
+</main>
+
+
+<footer class="footer">
+<div class="container footer-container">
+
+<div>
+<h4>Lontara</h4>
+<p style="font-size:.9rem;color:var(--text-muted);">
+Environmental & Land Intelligence Studio.
+</p>
+</div>
+
+<div>
+<p style="font-size:.9rem;color:var(--text-muted);">
+© 2026 Lontara. Seluruh Hak Cipta Dilindungi.
+</p>
+</div>
+
+</div>
+</footer>
+
+<script src="../../js/utils.js"></script>
+<script src="../../js/animation.js"></script>
+<script src="../../js/main.js"></script>
+
+</body>
 </html>
